fix: change styles of the header, game page, profile page in dark mode, delete leaderBoard page (#55)

--- a/packages/client/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/packages/client/src/pages/ProfilePage/ProfilePage.module.scss
@@ -14,3 +14,7 @@
   background-repeat: no-repeat;
   background-color: var(--neutral-100);
 }
+
+.darkContainer {
+  background-color: var(--black);
+}
